[tool.poetry]
name = "seidr"
version = "2.1.0"
description = "Synthesize Execute Instruct Debug Rank"
authors = ["Vadim Liventsev <v.liventsev@tue.nl>", "Anastasia Grishina <anastasiia@simula.no>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers"
]

[tool.poetry.dependencies]
python = "^3.9"
psb2 = ">=1.1.1"
openai = "<1.0.0"
more-itertools = ">=8.0.0,<9.0.0"
programlib = ">=8.0.0,<9.0.0"
wandb = "<1.0.0"
gitpython = ">=3.0.0,<4.0.0"
tenacity = ">=8.0.0,<9.0.0"
pandas = ">=1.0.0,<2.0.0"
fire = "<1.0.0"
jsonlines = "^4.0.0"
jupyterlab = "^4.0.7"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
